# Raytracer

./: CMakeLists.txt  README.md  build.sh  clean.sh  valid.json
doc/: doc.md
src/: Main.cpp
src/elementary_data/: Color.cpp  Color.hpp  Matrix.cpp  Matrix.hpp  Position.cpp  Position.hpp  Ray.cpp  Ray.hpp  Rotation.cpp  Rotation.hpp  Vector.cpp  Vector.hpp
src/errors/: ContainerException.hpp  FileManagerException.hpp  GettersException.hpp  ImageManagerException.hpp  JsonParserException.hpp  ObjectFactoryException.hpp
src/file_manager/: FileManager.cpp  FileManager.hpp  ImageManager.cpp  ImageManager.hpp
src/graphic_render/: Window.cpp  Window.hpp
src/objects/: IObject.hpp  ObjectsFactory.cpp  ObjectsFactory.hpp
src/objects/camera/: Camera.cpp  Camera.hpp
src/objects/light/: ALight.cpp  ALight.hpp  AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  ILight.hpp
src/objects/primitives/: APrimitive.cpp  APrimivite.hpp  Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  IPrimitive.hpp  MobiusStrip.cpp  MobiusStrip.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Tetrahedron.cpp  Tetrahedron.hpp
src/parser/: JsonParser.cpp  JsonParser.hpp
src/parser/data_getter/: AContainer.cpp  AContainer.hpp  AmbientLightContainer.cpp  AmbientLightContainer.hpp  BoxContainer.cpp  BoxContainer.hpp  BoxsListContainer.cpp  BoxsListContainer.hpp  CameraContainer.cpp  (+44 more)
src/pixel_buffer/: PixelBuffer.cpp  PixelBuffer.hpp
src/raytracing/: Entity.cpp  Entity.hpp  Observer.cpp  Observer.hpp
src/va_getter/: VaGetter.hpp
(+4 files in other folders)
